fix: bring back missing slash-command scrollbar

--- a/src/main/frontend/ui.css
+++ b/src/main/frontend/ui.css
@@ -1,19 +1,11 @@
-#ui__ac {
-  &-inner {
-    max-height: 400px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    position: relative;
-    -webkit-overflow-scrolling: touch;
-
-    > .menu-link {
-      padding: 6px 8px;
-    }
+#ui__ac-inner {
+  > .menu-link {
+    padding: 6px 8px;
   }
 }
 
 .search-all #ui__ac-inner {
-    max-height: none;
+  max-height: none;
 }
 
 .ui__notifications {
